--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
               </div>
               <div class="member-info">
                 <h4>Max Llovera Martí</h4>
-                <span>Chief Executive Officer</span>
+                <span>Gameobject Components</span>
+<span>Frustum Culling</span>
+<span>Particle System</span>
               </div>
             </div>
           </div>
@@ -142,7 +144,9 @@
               </div>
               <div class="member-info">
                 <h4>Arnau Ustrell Vacas</h4>
-                <span>Product Manager</span>
+                <span>Loading Texture</span>
+		<span>Custom File Format</span>
+<span>Particle System</span>
               </div>
             </div>
           </div>
@@ -157,7 +161,9 @@
               </div>  
               <div class="member-info">
                 <h4>Maria Garrigolas Ledo</h4>
-                <span>CTO</span>
+                <span>Loading Geometry</span>
+	<span>Serialization</span>
+<span>Particle System</span>
               </div>
             </div>
           </div>
