added socials (github)

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                 <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
                
                 <div class="social">
-                  <a href=""><i class="bi bi-github"></i></a>
+   <a href="https://github.com/maxllovera"><i class="bi bi-github"></i></a>
+
                 </div>
               </div>
               <div class="member-info">
@@ -139,7 +140,7 @@
                 <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
                
               <div class="social">
-                  <a href=""><i class="bi bi-github"></i></a>
+   <a href="https://github.com/arnauustrell"><i class="bi bi-github"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -156,7 +157,7 @@
               <div class="member-img">
                 <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
               <div class="social">
-                  <a href=""><i class="bi bi-github"></i></a>
+   <a href="https://github.com/meeeri08"><i class="bi bi-github"></i></a>
                 </div>
               </div>  
               <div class="member-info">
