--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
         <div class="row">
 
-          <div class="col-lg-6">
+          <div class="col-lg-5">
 
             <div class="row">
               <div class="col-md-12">
@@ -217,22 +217,16 @@
                   <p> Carrer de la Igualtat, 33, 08222 Terrassa, Barcelona</p>
                 </div>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-12">
                 <div class="info-box mt-4">
                   <i class="bx bx-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>max.llovera@estudiantat.upc.edu
-			arnau.ustell@estudiantat.upc.edu
-			maria.garrigolas@estudiantat.upc.edu</p>
+                  <p>max.llovera@estudiantat.upc.edu</p>
+			<p>arnau.ustell@estudiantat.upc.edu</p>
+			<p>maria.garrigolas@estudiantat.upc.edu</p>
                 </div>
               </div>
-              <div class="col-md-6">
-                <div class="info-box mt-4">
-                  <i class="bx bx-phone-call"></i>
-                  <h3>Call Us</h3>
-                  <p>+34 697 48 47 68</p>
-                </div>
-              </div>
+
             </div>
 
           </div>
