--- a/index.html
+++ b/index.html
@@ -311,10 +311,8 @@
               <center>
                 <h2>Particle System!</h2>
               </center>
-              <div class="col align-items-left">
-                <iframe width="420" height="315" src="https://youtu.be/uVOdDZOVIlo">
-</iframe>
 
+              <iframe width="1080" height="720" src="https://www.youtube.com/embed/uVOdDZOVIlo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
 
 
