--- a/index.html
+++ b/index.html
@@ -314,11 +314,19 @@
 
               <iframe width="1080" height="720" src="https://www.youtube.com/embed/uVOdDZOVIlo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
               </div>
+            </p>
+            <center>
+            <div class="row">
+            <div class="col align-items-center">
+              <img src="assets/img/gif1.gif" height="300px" width="40%">
 
+            </div>
+          </p>
+          <div class="col align-items-center">
+            <img src="assets/img/gif2.gif" height="300px" width="40%">
 
-
-
-
+          </div>
+        </center>
               <!-- ======= Team Section ======= -->
               <section id="team" class="team section-bg">
                 <div class="container">
